--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "new_project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://NickPaferov.github.io/todolist",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -14,6 +15,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.24",
     "@types/uuid": "^8.3.4",
+    "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
@@ -31,7 +33,9 @@
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "jest:integration": "jest -c integration/jest.config.js",
-    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
+    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -73,6 +77,7 @@
     "@storybook/react": "^6.5.6",
     "@storybook/testing-library": "^0.0.11",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "gh-pages": "^4.0.0",
     "jest-image-snapshot": "^5.1.0",
     "jest-puppeteer": "^6.1.0",
     "prop-types": "^15.8.1",
